--- a/gestures/www/index.html
+++ b/gestures/www/index.html
@@ -22,6 +22,10 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="App">
-    <box></box>
+    <card>Card 1</card>
+    <card>Card 2</card>
+    <card>Card 3</card>
+    <card>Card 4</card>
+    <card>Card 5</card>
   </body>
 </html>
