--- a/config/www/index.html
+++ b/config/www/index.html
@@ -22,6 +22,9 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="App">
+    <ion-header-bar class="bar-dark">
+      <h1 class="title">Defaults</h1>
+    </ion-header-bar>
     <ion-tabs>
       <ion-tab title="One">
         <ion-content>Tab 1</ion-content>
